# DelftBlue_interface

./: interface.sh  main.sh
job/: cleanup.sh  main  main.c  output.txt  remote.sh  remote_script.sh  request.sh  script.sh
job/subjob/: request.sh  script.sh
job/subjob1/: cmake_build.sh  remote_script.sh  request.sh  script.sh
output/output/: .bash_history  slurm-8556132.out
output/output/.lmod.d/.cache/: spiderT.x86_64_Linux.lua  spiderT.x86_64_Linux.luac_5.3
output/output/.ssh/: authorized_keys  id_ecdsa  id_ecdsa.pub  known_hosts
output/output/job/subjob/: cmake_build.sh  output.txt  request.sh  slurm-8556169.out
output/output/job/subjob/OpenMP_exercises/: main.c
output/output/job/subjob/OpenMP_exercises/pi/: SIMD.h
output/output/job/subjob1/: cmake_build.sh  output.txt  request.sh  script.sh  slurm-8556170.out
output/output/job/subjob1/OpenMP_exercises/: CMakeLists.txt
output/output/job/subjob1/OpenMP_exercises/matrix_vector/: mv.h
remote/: cleanup.sh  dispatch.sh
utils/: interface.sh  job_monitor.sh  monitor.sh
